--- a/index.html
+++ b/index.html
@@ -21,198 +21,238 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="webstudio-logo" href="./index.html"
-          >Web<span class="accent">Studio</span></a
-        >
-        <ul class="nav-menu">
-          <li class="nav-studio">
-            <a class="nav-menu-item" href="./index.html">Studio</a>
-          </li>
-          <li><a class="nav-menu-item" href="">Portfolio</a></li>
-          <li><a class="nav-menu-item" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contact-info">
-        <ul class="contacts-list">
-          <li>
-            <a class="contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+      <div class="container">
+        <div class="header-container">
+          <nav class="header-navigation">
+            <a class="webstudio-logo" href="./index.html"
+              >Web<span class="accent">Studio</span></a
             >
-          </li>
-          <li>
-            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+            <ul class="nav-menu">
+              <li class="nav-studio">
+                <a class="nav-menu-item" href="./index.html">Studio</a>
+              </li>
+              <li><a class="nav-menu-item" href="">Portfolio</a></li>
+              <li><a class="nav-menu-item" href="">Contacts</a></li>
+            </ul>
+          </nav>
+          <address class="contact-info">
+            <ul class="contacts-list">
+              <li>
+                <a class="contact" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="contact" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
     </header>
     <main>
       <section class="hero-section">
-        <h1 class="hero-phrase">Effective Solutions for Your Business</h1>
-        <button class="order-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-phrase">Effective Solutions for Your Business</h1>
+          <div class="hero-container">
+            <button class="order-btn" type="button">Order Service</button>
+          </div>
+        </div>
       </section>
       <section class="advantages-section">
-        <h2 class="advantage-name">Advantages</h2>
-        <ul>
-          <li class="advantage-list-item">
-            <h3 class="advantage-name">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="advantage-list-item">
-            <h3 class="advantage-name">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="advantage-list-item">
-            <h3 class="advantage-name">Diligence</h3>
-            <p class="text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="advantage-list-item">
-            <h3 class="advantage-name">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <!-- <h2 class="advantage-name">Advantages</h2> -->
+          <ul class="advantages-list">
+            <li class="advantage-list-item">
+              <h3 class="advantage-name">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantage-list-item">
+              <h3 class="advantage-name">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantage-list-item">
+              <h3 class="advantage-name">Diligence</h3>
+              <p class="text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantage-list-item">
+              <h3 class="advantage-name">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team-section">
-        <h2 class="section-header">Our Team</h2>
-        <ul>
-          <li class="team-member">
-            <img
-              class="member-image"
-              src="./images/img.jpg"
-              alt="Mark Guerrero photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="member-name">Mark Guerrero</h3>
-            <p class="member-position">Product Designer</p>
-          </li>
-          <li class="team-member">
-            <img
-              class="member-image"
-              src="./images/img-2.jpg"
-              alt="Tom Ford photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="member-name">Tom Ford</h3>
-            <p class="member-position">Frontend Developer</p>
-          </li>
-          <li class="team-member">
-            <img
-              class="member-image"
-              src="./images/img-3.jpg"
-              alt="Camila Garcia photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="member-name">Camila Garcia</h3>
-            <p class="member-position">Marketing</p>
-          </li>
-          <li class="team-member">
-            <img
-              class="member-image"
-              src="./images/img-4.jpg"
-              alt="Daniel Wilson photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="member-name">Daniel Wilson</h3>
-            <p class="member-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-header">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-member">
+              <div class="member-container">
+                <img
+                  class="member-image"
+                  src="./images/img.jpg"
+                  alt="Mark Guerrero photo"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="member-name">Mark Guerrero</h3>
+                <p class="member-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-member">
+              <div class="member-container">
+                <img
+                  class="member-image"
+                  src="./images/img-2.jpg"
+                  alt="Tom Ford photo"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="member-name">Tom Ford</h3>
+                <p class="member-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-member">
+              <div class="member-container">
+                <img
+                  class="member-image"
+                  src="./images/img-3.jpg"
+                  alt="Camila Garcia photo"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="member-name">Camila Garcia</h3>
+                <p class="member-position">Marketing</p>
+              </div>
+            </li>
+            <li class="team-member">
+              <div class="member-container">
+                <img
+                  class="member-image"
+                  src="./images/img-4.jpg"
+                  alt="Daniel Wilson photo"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="member-name">Daniel Wilson</h3>
+                <p class="member-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio-section">
-        <h2 class="section-header">Our portfolio</h2>
-        <ul>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/img1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-name">Banking App</h3>
-            <p class="text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/img2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-name">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/img3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-name">Meditation App</h3>
-            <p class="text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/img4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-name">Taxi Service</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/img6.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-name">Screen Illustrations</h3>
-            <p class="text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/img5.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-name">Online Courses</h3>
-            <p class="text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-header">Our portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="project-name">Banking App</h3>
+                <p class="text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="project-name">Cashless Payment</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="project-name">Meditation App</h3>
+                <p class="text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="project-name">Taxi Service</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img6.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="project-name">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img5.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="project-name">Online Courses</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"
-        >Web<span class="accent-footer">Studio</span></a
-      >
-      <p class="motivation-phrase">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-container">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="accent-footer">Studio</span></a
+          >
+          <p class="motivation-phrase">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
