--- a/index.html
+++ b/index.html
@@ -21,35 +21,33 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="header-container">
-          <nav class="header-navigation">
-            <a class="webstudio-logo" href="./index.html"
-              >Web<span class="accent">Studio</span></a
-            >
-            <ul class="nav-menu">
-              <li class="nav-studio">
-                <a class="nav-menu-item" href="./index.html">Studio</a>
-              </li>
-              <li><a class="nav-menu-item" href="">Portfolio</a></li>
-              <li><a class="nav-menu-item" href="">Contacts</a></li>
-            </ul>
-          </nav>
-          <address class="contact-info">
-            <ul class="contacts-list">
-              <li>
-                <a class="contact" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="contact" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a class="webstudio-logo" href="./index.html"
+            >Web<span class="accent">Studio</span></a
+          >
+          <ul class="nav-menu">
+            <li class="nav-studio">
+              <a class="nav-menu-item" href="./index.html">Studio</a>
+            </li>
+            <li><a class="nav-menu-item" href="">Portfolio</a></li>
+            <li><a class="nav-menu-item" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contact-info">
+          <ul class="contacts-list">
+            <li>
+              <a class="contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
