--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
             <li class="nav-studio">
               <a class="nav-menu-item" href="./index.html">Studio</a>
             </li>
-            <li><a class="nav-menu-item" href="">Portfolio</a></li>
-            <li><a class="nav-menu-item" href="">Contacts</a></li>
+            <li class="nav-studio">
+              <a class="nav-menu-item" href="">Portfolio</a>
+            </li>
+            <li class="nav-studio">
+              <a class="nav-menu-item" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="contact-info">
