--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </section>
       <section class="advantages-section">
         <div class="container">
-          <!-- <h2 class="advantage-name">Advantages</h2> -->
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantage-list-item">
               <h3 class="advantage-name">Strategy</h3>
